--- a/app/index.jade
+++ b/app/index.jade
@@ -51,17 +51,20 @@ html
                 .item
                   .circle 04
                   p Как за год достичь<br>1300 заказов?
-              form.email-form
+              form.email-form#email_form
                 span.title Скачать презентацию бесплатно
                 p Бесплатная раздача материалов конференции ПрактикаDays скоро будет приостановлена!<br>Следующая ПрактикаDays пройдет 4 октября в Москве
                 .form-inner
                   .col
-                    input(type='email' placeholder='Введите ваш e-mail')
+                    input(type='email' id='user_email' placeholder='Введите ваш e-mail')
                   .col
-                    .button
+                    .button#email_form_button
                       i(class='fa fa-envelope')
                       span Получить материалы на почту
       .footer-inner.block
+        .svg-section
+          svg(height="600" width="270")
+            line(x1="270" y1="0" x2="0" y2="600")
         .block-inner
           .footer-left
             p
@@ -82,14 +85,14 @@ html
                   span praktikadays
             p
               | Оставьте свой мобильный телефон - мы напомним<br> о конференции за неделю
-            form.mobile-form
+            form.mobile-form#mobile_form
               .form-inner
                 .col
                   .user-phone-container
                     i.fa.fa-phone
-                    input(type='tel' class='user-phone' required pattern='[0-9_-]{10}' placeholder='(___) ___-__-__' id='user_phone' title='Формат: (096) 999 99 99')
+                    input(type='tel' class='user-phone' required pattern='[0-9_-]{10}' placeholder='(___) ___-__-__' id='user_mobile' title='Формат: (096) 999 99 99')
                 .col
-                  .button
+                  .button#mobile_form_button
                     span Напоминание по SMS
 
     //- Google Analytics
