--- a/app/stylesheets/page.styl
+++ b/app/stylesheets/page.styl
@@ -36,12 +36,15 @@
       height: 100%
       width: 100%
       background-image: url("../images/bg.jpg")
+      background-size: cover
+      background-repeat: no-repeat
+      background-position: center center
       filter: blur(12px)
       -webkit-filter: blur(12px)
       -moz-filter: blur(12px)
       -o-filter: blur(12px)
       -ms-filter: blur(12px)
-      filter: url(blur.svg#blur)
+      // filter: url(blur.svg#blur)
 
     .doronin
       background-image: url("../images/doronin.png")
@@ -160,7 +163,10 @@
         display: block
         width: 100%
         height: 100%
-        text-decoration: underline
+
+        &:hover
+          span
+            text-decoration: none
 
       .icon
         margin: -20px 10px 0 0
