--- a/app/index.jade
+++ b/app/index.jade
@@ -38,19 +38,19 @@ html
             .logo
           .information
             .information-inner
-              .items
-                .item
+              ul.items
+                li.item
                   .circle 01
                   p Как за год достичь<br>1300 заказов?
-                .item
-                  .circle 02
-                  p Как за год достичь<br>1300 заказов?
-                .item
+                li.item
                   .circle 03
-                  p Как за год достичь<br>1300 заказов?
-                .item
+                  p Как правильно организовать акции на сайте
+                li.item
+                  .circle 02
+                  p 5 важных фактов<br>про email маркетинг
+                li.item
                   .circle 04
-                  p Как за год достичь<br>1300 заказов?
+                  p Как организовать работу<br>магазина
               form.email-form#email_form
                 span.title Скачать презентацию бесплатно
                 p Бесплатная раздача материалов конференции ПрактикаDays скоро будет приостановлена!<br>Следующая ПрактикаDays пройдет 4 октября в Москве
