--- a/app/stylesheets/page.styl
+++ b/app/stylesheets/page.styl
@@ -149,6 +149,8 @@
     .footer-right
       width: 424px
       float: right
+      position: relative
+      top: -5px
 
       .social-block
         clearfix()
