crossplatform issues fixes

--- a/app/stylesheets/mozilla.styl
+++ b/app/stylesheets/mozilla.styl
@@ -1,74 +1,6 @@
 body.mozilla
-  .header
-    .logo
-      top: 0px
-
-    .payu
-      top: 5px
-
-    .scroll-button
-      .icon-scroll
-        top: 0px
-
-  #screen-four
-    ul
-      li
-        .circle
-          i
-            top: -8px
-
-  .social
-    li
-      margin: 0px 7px
-
-  #screen-ten
-    .icon-person
-      float: left
-      font-size: 270px
-      margin: 50px 0 0 0
-
-  #screen-eleven
-    .clock
-      top: 0
-      margin-top: 0
-
-  #screen-thirteen
-  #reviews
-    .reviews
-      ul
-        li
-          .icon-quote-top
-            top: 10px
-
-  #screen-fourteen
-    .box
-      .time-block
-        li
-          span
-            top: -10px
-
-  #screen-fiveteen
-    .grid
-      .left-column
-      .right-column
-        li
-          div
-            top: 0
-      .left-column
-        li
-          &:last-child
-            div
-              top: -10px
-
-  #screen-seventeen
-    .partners
-      .logo-1
-        top: -10px
-
-      .logo-2
-        top: 7px
-
-  #screen-twenty
-    .message
-      .icon-quote-top
-        top: 10px
+  .content
+    .footer-inner
+      .footer-right
+        .icon
+          margin: 0 10px 0 0
