--- a/app/stylesheets/page.styl
+++ b/app/stylesheets/page.styl
@@ -104,6 +104,7 @@
         width: 100%
         background-color: $redLightColor
         border-radius: 30px
+        box-sizing: border-box
 
         .title
           margin: 0
