fixed env cludge

--- a/app/index.jade
+++ b/app/index.jade
@@ -10,34 +10,18 @@ html
     | <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700&subset=latin,cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
     | <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700&subset=latin,cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
     | <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
-
-    //- DEVELOPMENT ENV
     //- styles
-    | <link rel="stylesheet" href="/stylesheets/fontcustom.css">
-    | <link rel="stylesheet" href="/stylesheets/font-awesome.css">
-    | <link rel="stylesheet" href="/stylesheets/style.css">
+    | <link rel="stylesheet" href="stylesheets/fontcustom.css">
+    | <link rel="stylesheet" href="stylesheets/font-awesome.css">
+    | <link rel="stylesheet" href="stylesheets/style.css">
     //- libraries
-    | <script type='text/javascript' src='/scripts/libs/jquery-2.1.1.min.js'></script>
-    | <script type='text/javascript' src='/scripts/libs/jquery.browser.min.js'></script>
-    | <script type='text/javascript' src='/scripts/libs/jquery.maskedinput.min.js'></script>
+    | <script type='text/javascript' src='scripts/libs/jquery-2.1.1.min.js'></script>
+    | <script type='text/javascript' src='scripts/libs/jquery.browser.min.js'></script>
+    | <script type='text/javascript' src='scripts/libs/jquery.maskedinput.min.js'></script>
     //- app scripts
-    | <script type='text/javascript' src='/scripts/app.js'></script>
-    | <script type='text/javascript' src='/scripts/models/form.js'></script>
-    | <script type='text/javascript' src='/scripts/views/main_view.js'></script>
-
-    //- //- PRODUCTION ENV
-    //- //- styles
-    //- | <link rel="stylesheet" href="http://www.praktikadays.ru/doronintemp/stylesheets/fontcustom.css">
-    //- | <link rel="stylesheet" href="http://www.praktikadays.ru/doronintemp/stylesheets/font-awesome.css">
-    //- | <link rel="stylesheet" href="http://www.praktikadays.ru/doronintemp/stylesheets/style.css">
-    //- //- libraries
-    //- | <script type='text/javascript' src='http://www.praktikadays.ru/doronintemp/scripts/libs/jquery-2.1.1.min.js'></script>
-    //- | <script type='text/javascript' src='http://www.praktikadays.ru/doronintemp/scripts/libs/jquery.browser.min.js'></script>
-    //- | <script type='text/javascript' src='http://www.praktikadays.ru/doronintemp/scripts/libs/jquery.maskedinput.min.js'></script>
-    //- //- app scripts
-    //- | <script type='text/javascript' src='http://www.praktikadays.ru/doronintemp/scripts/app.js'></script>
-    //- | <script type='text/javascript' src='http://www.praktikadays.ru/doronintemp/scripts/models/form.js'></script>
-    //- | <script type='text/javascript' src='http://www.praktikadays.ru/doronintemp/scripts/views/main_view.js'></script>
+    | <script type='text/javascript' src='scripts/app.js'></script>
+    | <script type='text/javascript' src='scripts/models/form.js'></script>
+    | <script type='text/javascript' src='scripts/views/main_view.js'></script>
 
   body
     .wrapper
